--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - 8080:8080
     volumes:
-      - ./src:/opt/gh-board/src
-      - ./style:/opt/gh-board/style
-      - ./test:/opt/gh-board/test
+      - ./src:/opt/gh-board/src:ro
+      - ./style:/opt/gh-board/style:ro
+      - ./test:/opt/gh-board/test:ro
+      - ./dist:/opt/gh-board/dist
