--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "gh-board",
   "version": "0.0.0",
-  "description": "kanban board using just GitHub",
+  "description": "Kanban for GitHub Issues",
+  "keywords": ["kanban", "github-issues", "pull-requests", "project-management"],
+  "bugs": {
+    "url": "https://github.com/ryanprior/gh-board/issues",
+    "email": "ryanprior@gmail.com"
+  },
+  "repository": "ryanprior/gh-pages",
   "main": "index.js",
   "scripts": {
     "lint": "eslint src --ext .js --ext .jsx",
@@ -30,15 +36,12 @@
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^7.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "favico.js": "^0.3.10",
     "file-loader": "^0.11.0",
     "http-server": "^0.9.0",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^4.0.4",
-    "node-libs-browser": "^2.0.0",
     "parallelshell": "^2.0.0",
-    "react-hot-loader": "^3.0.0-beta.6",
     "url-loader": "^0.5.6",
     "webdriver-manager": "^11.1.0",
     "webdriverio": "^4.5.2",
@@ -62,10 +65,9 @@
     "levelup": "^1.3.1",
     "memdown": "^1.1.2",
     "mermaid": "^7.0.0",
-    "moment": "2.18.0",
+    "moment": "2.18.1",
     "octicons": "^6.0.0",
     "octokat": "^0.7.0",
-    "puzzle-script": "0.0.2",
     "qs": "^6.3.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.31.0",
