--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "less": "^2.7.1",
     "less-loader": "^4.0.4",
     "parallelshell": "^2.0.0",
+    "titlecaps": "^0.3.2",
     "url-loader": "^0.5.6",
     "webdriver-manager": "^11.1.0",
     "webdriverio": "^4.5.2",
