--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,19 @@ language: node_js
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+
+script:
+  - npm run build
+  - $(npm bin)/http-server . &
+  - node ./script/fetch-issues.js
+
+# Remove /dist/ from .gitignore
+before_deploy:
+  - sed -i '/\/dist\//d' ./.gitignore
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  on:
+    branch: master
