--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "moment": "2.18.1",
     "octicons": "^6.0.0",
     "octokat": "^0.7.0",
+    "puppeteer": "^0.13.0",
     "qs": "^6.3.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.31.0",
@@ -84,6 +85,7 @@
     "react-router": "^3.0.0",
     "recordo": "^0.0.6",
     "ultramarked": "^1.7.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "unfetch": "^3.0.0"
   }
 }
