.travis.yml: Comment out xvfb start
The tests are broken, and xvfb start slows down the builds.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@
 sudo: false
 language: node_js
 
+# The tests are broken, so we skip it for now
 # Needed for Firefox
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+# before_script:
+#   - export DISPLAY=:99.0
+#   - sh -e /etc/init.d/xvfb start
 
 script:
   - npm run build
